move quote retrieval to separate namespace