@@ -4,9 +4,10 @@
   :license {:name "MIT License"
             :url "https://opensource.org/licenses/MIT"}
   :dependencies [[org.clojure/clojure "1.10.1"]
-                 [http-kit "2.3.0"]
+                 [org.clojure/tools.logging "1.1.0"]
+                 [clj-time "0.15.2"]
+                 [http-kit "2.4.0-alpha5"]
                  [org.clojure/data.json "0.2.7"]]
-  :jvm-opts ["--add-modules" "java.xml.bind"]
   :main ^:skip-aot cljqbot.core
   :target-path "target/%s"
   :profiles {:uberjar {:aot :all}})
